# fastapi-chat-kafka-mongodb

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/application/api/: main.py  schemas.py
app/application/api/messages/: filters.py  handlers.py  schemas.py
app/domain/: __init__.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/infra/repositories/: messages.py
app/infra/repositories/filters/: messsages.py
app/infra/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/logic/queries/: base.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_messages.py
docker_compose/: storages.yaml
