[tool.poetry]
name = "simple-chat"
version = "0.1.0"
description = ""
authors = ["dima cheban <dimacheban23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
motor = "^3.7.0"
uvicorn = {extras = ["all"], version = "^0.34.0"}
bpython = "^0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
